# deskoy

./: .gitignore  GITHUB_RELEASE_v1.2.2.md  GITHUB_RELEASE_v1.2.3.md  README.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.2.3.md  forge.config.ts  index.html  knip.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/cover/: bi.html  blank.html  docs.html  excel.html  jira.html  vscode.html
scripts/: build-installer-assets.cjs
src/: App.tsx  global.d.ts  index.css  index.html  index.ts  legacy-ui.ts  main.tsx  preload.ts  renderer.ts  tauri-deskoy-api.ts
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
src-tauri/src/: main.rs
src/components/: LegacySettingsMarkup.tsx  UpdatesPanel.tsx
