[package]
name = "deskoy"
version = "1.2.5"
description = "Deskoy"
authors = ["User"]
license = "LicenseRef-Deskoy-Source-Available-1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
